# iw-docs

./: README.md  docusaurus.config.ts  package-lock.json  package.json  resumo_placas.txt
docs/: intro.mdx
docs/application-boards/: _category_.json  index.md
docs/devkits/: _category_.json  index.md
docs/devkits/iw-aiot-explorer/: _category_.json  downloads.md  hardware.md  overview.md
docs/devkits/iw-beacon/: _category_.json  downloads.md  hardware.md  overview.md
docs/devkits/iw-core-board/: _category_.json  downloads.md  hardware.md  overview.md
docs/devkits/iw-espmi-ind/: _category_.json  downloads.md  examples.md  firmware.md  hardware.md  overview.md
docs/devkits/iw-scott/: _category_.json  downloads.md  examples.md  overview.md  pinout.md
docs/devkits/iw-scott/Examples/BLE-Gateware/main/: BLE-Gateware.c  CMakeLists.txt  gateway_config.c  gateway_config.h  gateway_led.c  gateway_led.h  gateway_runtime.c  gateway_runtime.h
docs/devkits/iw-starter-kit/: _category_.json  downloads.md  hardware.md  overview.md
docs/modules/: _category_.json  index.md
docs/modules/iw-digitalamplifier/: _category_.json  downloads.md  hardware.md  overview.md
docs/software/: _category_.json  index.md
docs/software/iw-automationlab/: _category_.json  overview.md
i18n/: README.md
i18n/en/docusaurus-theme-classic/: footer.json  navbar.json
src/pages/: index.module.css  index.tsx
static/: robots.txt
static/img/iw-beacon/: .gitkeep
static/models/: iw-aiot-explorer-3d.glb  iw-beacon-3d.glb  iw-digital-amplifier-3d.glb  iw-rtd-aq-3d.glb  iw-starter-kit-3d.glb
(+90 files in other folders)
